documentacion/obtenida/ARINC 429/driver and software/LX708-1/API/L71W32.H

typedef void VOID;
typedef int INT;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef unsigned long * LPULONG;
typedef unsigned long MSGADDR;
typedef unsigned long LISTADDR;
typedef int BOOL;
typedef int HCARD;
typedef int ERRVAL;

L71W32API ERRVAL __stdcall L71_KernMEMRdsW(LPUSHORT bufptr,INT addrval,INT countval,INT bustype,HCARD handleval);

L71W32API ERRVAL __stdcall L71_KernMEMRdW(LPUSHORT valueptr,INT addrval,INT bustype,HCARD handleval);

L71W32API ERRVAL __stdcall L71_KernMEMWrL(ULONG value,INT addrval,INT bustype,HCARD handleval);

L71W32API ERRVAL __stdcall L71_KernMEMWrsL(LPULONG bufptr,INT addrval,INT countval,INT bustype,HCARD handleval);

L71W32API ERRVAL __stdcall L71_KernMEMWrsW(LPUSHORT bufptr,INT addrval,INT countval,INT bustype,HCARD handleval);

L71W32API ERRVAL __stdcall L71_KernMEMWrW(USHORT value,INT addrval,INT bustype,HCARD handleval);

L71W32API ERRVAL __stdcall L71_KernQuick(BOOL flag,HCARD handleval);

L71W32API ERRVAL __stdcall L71_KernStatus(LPULONG valueptr,ULONG type,HCARD handleval);

L71W32API ERRVAL __stdcall L71_KernStatusEx(LPULONG valueptr,ULONG type,ULONG index,HCARD handleval);

L71W32API MSGADDR __stdcall L71_ListAddr(INT index,LISTADDR listaddr,HCARD handleval);

L71W32API MSGADDR __stdcall L71_ListAddrEx(INT index,LISTADDR listaddr,LPUSHORT header);

L71W32API MSGADDR __stdcall L71_ListBlockRd(LPUSHORT buf,LISTADDR listaddr,HCARD handleval);

L71W32API MSGADDR __stdcall L71_ListBlockRdEx(LPUSHORT buf,INT index,LISTADDR listaddr,HCARD handleval);

L71W32API MSGADDR __stdcall L71_ListBlockWr(LPUSHORT buf,LISTADDR listaddr,HCARD handleval);

L71W32API MSGADDR __stdcall L71_ListBlockWrEx(LPUSHORT buf,INT index,LISTADDR listaddr,HCARD handleval);

L71W32API ERRVAL __stdcall L71_ListClear(LISTADDR listaddr,HCARD handleval);

L71W32API LISTADDR __stdcall L71_ListConfig(ULONG configval,INT count,USHORT skipval,HCARD handleval);

L71W32API LISTADDR __stdcall L71_ListConfigEx(ULONG configval,INT count,USHORT skipval,HCARD handleval);

L71W32API INT __stdcall L71_ListDataRd(LPUSHORT buf,INT count,LISTADDR listaddr,HCARD handleval);

L71W32API INT __stdcall L71_ListDataRdEx(LPUSHORT buf,INT count,INT index,LISTADDR listaddr,HCARD handleval);

L71W32API INT __stdcall L71_ListDataWr(LPUSHORT buf,INT count,LISTADDR listaddr,HCARD handleval);

L71W32API INT __stdcall L71_ListDataWrEx(LPUSHORT buf,INT count,INT index,LISTADDR listaddr,HCARD handleval);

L71W32API ERRVAL __stdcall L71_ListInit(LISTADDR listaddr,MSGADDR msgaddr,HCARD handleval);

L71W32API MSGADDR __stdcall L71_ListNextRd(ULONG listaddr,LPUSHORT header);

L71W32API MSGADDR __stdcall L71_ListNextWr(ULONG listaddr,LPUSHORT header);

L71W32API VOID __stdcall L71_ListPostRd(LISTADDR listaddr,LPUSHORT header,HCARD handleval);

L71W32API VOID __stdcall L71_ListPostWr(LISTADDR listaddr,LPUSHORT header,HCARD handleval);

L71W32API VOID __stdcall L71_ListPreRd(LISTADDR listaddr,LPUSHORT header,HCARD handleval);

L71W32API VOID __stdcall L71_ListPreWr(LISTADDR listaddr,LPUSHORT header,HCARD handleval);

L71W32API INT __stdcall L71_ListStatus(LISTADDR listaddr,HCARD handleval);

L71W32API ULONG __stdcall L71_MakeLong(USHORT valh,USHORT vall);

L71W32API ULONG __stdcall L71_Mask(ULONG dataval,USHORT cntval);

L71W32API VOID __stdcall L71_MEMWINFillW(USHORT value,ULONG addrval,ULONG countval,INT bustype,HCARD handleval);

L71W32API USHORT __stdcall L71_MEMWINRdB(ULONG addrval,INT bustype,HCARD handleval);

L71W32API ULONG __stdcall L71_MEMWINRdL(ULONG addrval,INT bustype,HCARD handleval);

L71W32API VOID __stdcall L71_MEMWINRdsL(LPULONG valueptr,ULONG addrval,INT countval,INT bustype,HCARD handleval);

L71W32API VOID __stdcall L71_MEMWINRdsW(LPUSHORT valueptr,ULONG addrval,INT countval,INT bustype,HCARD handleval);

L71W32API USHORT __stdcall L71_MEMWINRdW(ULONG addrval,INT bustype,HCARD handleval);

L71W32API VOID __stdcall L71_MEMWINWrB(USHORT value,ULONG addrval,INT bustype,HCARD handleval);

L71W32API VOID __stdcall L71_MEMWINWrL(ULONG value,ULONG addrval,INT bustype,HCARD handleval);

L71W32API VOID __stdcall L71_MEMWINWrsL(LPULONG valueptr,ULONG addrval,INT countval,INT bustype,HCARD handleval);

L71W32API VOID __stdcall L71_MEMWINWrsW(LPUSHORT valueptr,ULONG addrval,INT countval,INT bustype,HCARD handleval);

L71W32API VOID __stdcall L71_MEMWINWrW(USHORT value,ULONG addrval,INT bustype,HCARD handleval);

L71W32API ULONG __stdcall L71_Mod(ULONG moda,ULONG modb);

L71W32API BOOL __stdcall L71_ModeIsBC(HCARD handleval);

L71W32API BOOL __stdcall L71_ModeIsMon(HCARD handleval);

L71W32API BOOL __stdcall L71_ModeIsNotBC(HCARD handleval);

L71W32API BOOL __stdcall L71_ModeIsNotMon(HCARD handleval);

L71W32API BOOL __stdcall L71_ModeIsNotRT(HCARD handleval);