documentacion/obtenida/ARINC 429/driver and software/LX708-1/API/L71W32NET.CS

        [DllImport("L71W32.DLL", EntryPoint = "_L71_KernMEMRdsW@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_KernMEMRdsW(ref UInt16 bufptr, Int32 addrval, Int32 countval, Int32 bustype, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_KernMEMRdW@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_KernMEMRdW(ref UInt16 valueptr, Int32 addrval, Int32 bustype, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_KernMEMWrL@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_KernMEMWrL(UInt32 value, Int32 addrval, Int32 bustype, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_KernMEMWrsL@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_KernMEMWrsL(ref UInt32 bufptr, Int32 addrval, Int32 countval, Int32 bustype, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_KernMEMWrsW@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_KernMEMWrsW(ref UInt16 bufptr, Int32 addrval, Int32 countval, Int32 bustype, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_KernMEMWrW@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_KernMEMWrW(UInt16 value, Int32 addrval, Int32 bustype, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_KernQuick@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_KernQuick(Int32 flag, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_KernStatus@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_KernStatus(ref UInt32 valueptr, UInt32 typeval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_KernStatusEx@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_KernStatusEx(ref UInt32 valueptr, UInt32 typeval, UInt32 index, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_ListAddr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L71_ListAddr(Int32 index, UInt32 listaddr, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_ListAddrEx@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L71_ListAddrEx(Int32 index, UInt32 listaddr, ref UInt16 header);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_ListBlockRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L71_ListBlockRd(ref UInt16 buf, UInt32 listaddr, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_ListBlockRdEx@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L71_ListBlockRdEx(ref UInt16 buf, Int32 index, UInt32 listaddr, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_ListBlockWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L71_ListBlockWr(ref UInt16 buf, UInt32 listaddr, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_ListBlockWrEx@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L71_ListBlockWrEx(ref UInt16 buf, Int32 index, UInt32 listaddr, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_ListClear@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_ListClear(UInt32 listaddr, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_ListConfig@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L71_ListConfig(UInt32 configval, Int32 count, UInt16 skipval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_ListConfigEx@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L71_ListConfigEx(UInt32 configval, Int32 count, UInt16 skipval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_ListDataRd@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_ListDataRd(ref UInt16 buf, Int32 count, UInt32 listaddr, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_ListDataRdEx@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_ListDataRdEx(ref UInt16 buf, Int32 count, Int32 index, UInt32 listaddr, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_ListDataWr@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_ListDataWr(ref UInt16 buf, Int32 count, UInt32 listaddr, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_ListDataWrEx@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_ListDataWrEx(ref UInt16 buf, Int32 count, Int32 index, UInt32 listaddr, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_ListInit@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_ListInit(UInt32 listaddr, UInt32 msgaddr, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_ListNextRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L71_ListNextRd(UInt32 listaddr, ref UInt16 header);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_ListNextWr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L71_ListNextWr(UInt32 listaddr, ref UInt16 header);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_ListPostRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L71_ListPostRd(UInt32 listaddr, ref UInt16 header, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_ListPostWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L71_ListPostWr(UInt32 listaddr, ref UInt16 header, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_ListPreRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L71_ListPreRd(UInt32 listaddr, ref UInt16 header, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_ListPreWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L71_ListPreWr(UInt32 listaddr, ref UInt16 header, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_ListStatus@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_ListStatus(UInt32 listaddr, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_MakeLong@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L71_MakeLong(UInt16 valh, UInt16 vall);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_Mask@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L71_Mask(UInt32 dataval, UInt16 cntval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_MEMWINFillW@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L71_MEMWINFillW(UInt16 value, UInt32 addrval, UInt32 countval, Int32 bustype, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_MEMWINRdB@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L71_MEMWINRdB(UInt32 addrval, Int32 bustype, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_MEMWINRdL@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L71_MEMWINRdL(UInt32 addrval, Int32 bustype, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_MEMWINRdsL@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L71_MEMWINRdsL(ref UInt32 valueptr, UInt32 addrval, Int32 countval, Int32 bustype, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_MEMWINRdsW@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L71_MEMWINRdsW(ref UInt16 valueptr, UInt32 addrval, Int32 countval, Int32 bustype, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_MEMWINRdW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L71_MEMWINRdW(UInt32 addrval, Int32 bustype, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_MEMWINWrB@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L71_MEMWINWrB(UInt16 value, UInt32 addrval, Int32 bustype, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_MEMWINWrL@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L71_MEMWINWrL(UInt32 value, UInt32 addrval, Int32 bustype, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_MEMWINWrsL@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L71_MEMWINWrsL(ref UInt32 valueptr, UInt32 addrval, Int32 countval, Int32 bustype, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_MEMWINWrsW@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L71_MEMWINWrsW(ref UInt16 valueptr, UInt32 addrval, Int32 countval, Int32 bustype, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_MEMWINWrW@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L71_MEMWINWrW(UInt16 value, UInt32 addrval, Int32 bustype, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_Mod@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L71_Mod(UInt32 moda, UInt32 modb);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_ModeIsBC@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_ModeIsBC(UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_ModeIsMon@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_ModeIsMon(UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_ModeIsNotBC@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_ModeIsNotBC(UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_ModeIsNotMon@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_ModeIsNotMon(UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_ModeIsNotRT@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_ModeIsNotRT(UInt32 handleval);
